第一阶段学习

--- a/b-final.ipynb
+++ b/b-final.ipynb
@@ -87,11 +87,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi,what's your name?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " hejie\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello hejie!\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "print('Hi,what\\'s your name?')#注意 ‘和'是不一样的，一个是中文下一个是英文下\n",
+    "name=input()\n",
+    "print(f'Hello {name}!')"
    ]
   },
   {
@@ -103,11 +127,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How are you today?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " Good\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sorry to hear that\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "print('How are you today?')\n",
+    "feeling=input()\n",
+    "if 'good'in feeling:\n",
+    "    print('I\\'m feeling good too')\n",
+    "else:\n",
+    "    print('sorry to hear that')"
    ]
   },
   {
@@ -119,11 +170,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How are you today?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " Good\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'm feeling good too\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "print('How are you today?')\n",
+    "feeling=input()\n",
+    "if 'good'in feeling.lower():\n",
+    "    print('I\\'m feeling good too')\n",
+    "else:\n",
+    "    print('sorry to hear that')"
    ]
   },
   {
@@ -135,11 +213,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What's your favorite color?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 变了\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You like  变了? My favorite color is orange\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "#应该要写上这个需要调用的函数才对，为什么没有调用也可以用呢？import random\n",
+    "print('What\\'s your favorite color?')\n",
+    "favcolor = input()\n",
+    "colors = ['red', 'orange', 'yellow', 'green', 'blue', 'indigo', 'purple']#靛\n",
+    "print(f'You like  {favcolor.lower()}? My favorite color is {random.choice(colors)}')"
    ]
   },
   {
@@ -191,12 +295,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi,what's your name?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 成\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello 成!\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Hello:\n",
+    "    def run(self):\n",
+    "        print('Hi,what\\'s your name?')\n",
+    "        name=input()\n",
+    "        print(f'Hello {name}!')\n",
+    "h=Hello()\n",
+    "h.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How are you today?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " good\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'm feeling good too\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Greeting:\n",
+    "    def run(self):\n",
+    "        print('How are you today?')\n",
+    "        feeling=input()\n",
+    "        if 'good'in feeling.lower():\n",
+    "            print('I\\'m feeling good too')\n",
+    "        else:\n",
+    "            print('sorry to hear that')\n",
+    "g=Greeting()\n",
+    "g.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "#这两个run有哪里不一样呢？不一样的第一个是问的是什么，第二个是输出的回应内容是什么。那如果我把这两个东西拎出来，那这两个就可以写成一个run。那准备把这两个东西泛化，泛化成一个公共的基类。"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Bot:\n",
+    "    def __init__(self):  #第二步 定义你之前说的self.q和self.a\n",
+    "        self.q=''\n",
+    "        self.a='' #这里可以不用定义，因为下面在run里面会跑出来self.a\n",
+    "    def _think(self,s):  #方法前面加_就是内部实现，不希望外面使用\n",
+    "        return s\n",
+    "    def run(self):      #第一步\n",
+    "        print(self.q)\n",
+    "        self.a=input()\n",
+    "        print(self._think(self.a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#概念化分离：init方法就是初始化第一句话的内容，只管那个内容。think方法只管怎么得到第三句话的内容。其他的打印，获取input都在run里面。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -214,29 +436,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class HelloBot(Bot):\n",
+    "    def __init__(self):\n",
+    "        self.q='Hi,what\\'s your name?'\n",
+    "    def _think(self, s):\n",
+    "        return f\"Hello {s}\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class GreetingBot(Bot):\n",
+    "    def __init__(self):\n",
+    "        self.q='How are you today?'\n",
+    "        \n",
+    "    def _think(self, s):\n",
+    "        if 'good'in s.lower() or 'fine' in s.lower():\n",
+    "            return('I\\'m feeling good too')\n",
+    "        else:\n",
+    "            return('sorry to hear that')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "import random\n",
+    "class FavoritecolorBot(Bot):\n",
+    "    def __init__(self):\n",
+    "        self.q='What\\'s your favorite color?'\n",
+    "    def _think(self, s):\n",
+    "        colors = ['red', 'orange', 'yellow', 'green', 'blue', 'indigo', 'purple']\n",
+    "        return f'You like  {s.lower()}? My favorite color is {random.choice(colors)}'"
    ]
   },
   {
@@ -252,11 +492,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class Garfield:\n",
+    "    def __init__(self):   #second 定义self.bots\n",
+    "        self.bots=[]\n",
+    "    def add(self,bot):\n",
+    "        self.bots.append(bot)\n",
+    "    \n",
+    "    def run(self):  #first \n",
+    "        print('Welcome to Garfield dialog systerm.Let\\'s talk!')\n",
+    "        print() #空一行\n",
+    "        for bot in self.bots: #从 self.bots 中取出元素，将其赋值给 bot\n",
+    "            bot.run()  #运行self.run 像是上面的h.run()g.run,h又可写成Hello(),即Hello().run()"
    ]
   },
   {
@@ -274,11 +524,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 155,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to Garfield dialog systerm.Let's talk!\n",
+      "\n",
+      "Hi,what's your name?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " c\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello c\n",
+      "How are you today?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " c\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sorry to hear that\n",
+      "What's your favorite color?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " c\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You like  c? My favorite color is orange\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "garfield=Garfield()#创建一个对象实例\n",
+    "# 向其中加入我们已经定义好的各个对话 bot 的对象实例\n",
+    "garfield.add(HelloBot())\n",
+    "garfield.add(GreetingBot())\n",
+    "garfield.add(FavoritecolorBot())\n",
+    "garfield.run()# 运行之"
    ]
   },
   {
@@ -320,11 +629,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "from time import sleep\n",
+    "from termcolor import colored\n",
+    "import random\n",
+    "import time\n",
+    "    \n",
+    "#用say提到重复的print 凡事重复的东西都很难看。\n",
+    "class Bot:\n",
+    "    wait=1\n",
+    "    def _say(self,s):\n",
+    "        sleep(Bot.wait)\n",
+    "        print(colored(s,'blue'))\n",
+    "\n",
+    "    def run(self):      \n",
+    "        self._say(self.q)\n",
+    "        self.a=input()\n",
+    "        self._say(self._think(self.a))\n",
+    "      "
    ]
   },
   {
@@ -352,11 +677,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "from simpleeval import simple_eval\n",
+    "class CalcBot(Bot):\n",
+    "    def __init__(self):\n",
+    "        self.q='Through recent upgrade I can do calculation now.Input some arthmetic expression to try.'\n",
+    "    def _think(self,s):\n",
+    "        result=simple_eval(s)\n",
+    "        return f'Done.   Result={result}'"
    ]
   },
   {
@@ -368,11 +699,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 158,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to Garfield dialog systerm.Let's talk!\n",
+      "\n",
+      "Hi,what's your name?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " c\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello c\n",
+      "\u001b[34mThrough recent upgrade I can do calculation now.Input some arthmetic expression to try.\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 9+8\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34mDone.   Result=17\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "garfield = Garfield()\n",
+    "garfield.add(HelloBot())\n",
+    "garfield.add(CalcBot())\n",
+    "garfield.run()"
    ]
   },
   {
@@ -440,11 +813,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class CalBot(Bot):\n",
+    "    def __init__(self):\n",
+    "        self.q=\"Through resent upgrade I can do calculation now.Inpute some arithcetic expression to try.Type 'exit','quit','q','x' to quit. \"\n",
+    "    def _think(self,s):\n",
+    "        result = simple_eval(s)\n",
+    "        return f\"Done.   Result = {result}\"\n",
+    "\n",
+    "    def run(self):      \n",
+    "        self._say(self.q)\n",
+    "        while True:\n",
+    "            self.a=input()\n",
+    "            if self.a.lower() in['exit','quit','q','x']:\n",
+    "                break\n",
+    "            self._say(self._think(self.a))"
    ]
   },
   {
@@ -460,16 +846,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "from random import choice\n",
+    "from time import sleep\n",
+    "from termcolor import colored\n",
+    "from simpleeval import simple_eval\n",
+    "\n",
+    "class Bot:\n",
+    "    \n",
+    "    wait=1  \n",
+    "    def __init__(self,runtype=\"once\"):  \n",
+    "        self.q=''\n",
+    "        self.a='' \n",
+    "        self.runtype=runtype\n",
+    "    def _think(self,s):  \n",
+    "        return s\n",
+    "\n",
+    "    def _say(self,s):\n",
+    "        sleep(Bot.wait)\n",
+    "        print(colored(s,'blue'))\n",
+    "\n",
+    "    def _run_once(self):      \n",
+    "        self._say(self.q)\n",
+    "        self.a=input()\n",
+    "        self._say(self._think(self.a))\n",
+    "    def _run_looped(self):      \n",
+    "        self._say(self.q)\n",
+    "        while True:\n",
+    "            self.a=input()\n",
+    "            if self.a.lower() in['exit','quit','q','x']:\n",
+    "                break\n",
+    "            self._say(self._think(self.a))\n",
+    "    def run(self):\n",
+    "        if self.runtype==\"once\":\n",
+    "            self._run_once()\n",
+    "        elif self.runtype==\"looped\":\n",
+    "            self._run_looped()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,29 +905,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class HelloBot(Bot):\n",
+    "    def __init__(self, runtype='once'):\n",
+    "        super().__init__(runtype)\n",
+    "        self.q = \"Hi, what is your name?\"\n",
+    "    def _think(self, s):\n",
+    "        return f\"Hello {s}\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class GreetingBot(Bot):\n",
+    "    def __init__(self, runtype='once'):\n",
+    "        super().__init__(runtype)\n",
+    "        self.q = \"How are you today?\"\n",
+    "\n",
+    "    def _think(self, s):\n",
+    "        if 'good' in s.lower() or 'fine' in s.lower():\n",
+    "            return \"I'm feeling good too\"\n",
+    "        else:\n",
+    "            return \"Sorry to hear that\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "import random\n",
+    "\n",
+    "class FavoriteColorBot(Bot):\n",
+    "    def __init__(self, runtype='once'):\n",
+    "        super().__init__(runtype)\n",
+    "        self.q = \"What's your favorite color?\"\n",
+    "\n",
+    "    def _think(self, s):\n",
+    "        colors = ['red', 'orange', 'yellow', 'green', 'blue', 'indigo', 'purple']\n",
+    "        return f\"You like {s.lower()}? My favorite color is {choice(colors)}\"\n"
    ]
   },
   {
@@ -521,11 +964,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class CalBot(Bot):\n",
+    "    def __init__(self, runtype='once'):\n",
+    "        super().__init__(runtype)\n",
+    "        self.q=\"Through resent upgrade I can do calculation now.Inpute some arithcetic expression to try.Type 'exit','quit','q','x' to quit. \"\n",
+    "    def _think(self,s):\n",
+    "        result = simple_eval(s)\n",
+    "        return f\"Done.   Result = {result}\""
    ]
   },
   {
@@ -537,11 +986,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to Garfield dialog systerm.Let's talk!\n",
+      "\n",
+      "\u001b[34mHi, what is your name?\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " hejie\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34mHello hejie\u001b[0m\n",
+      "\u001b[34mHow are you today?\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " ood\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34mSorry to hear that\u001b[0m\n",
+      "\u001b[34mWhat's your favorite color?\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " blue\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34mYou like blue? My favorite color is purple\u001b[0m\n",
+      "\u001b[34mThrough resent upgrade I can do calculation now.Inpute some arithcetic expression to try.Type 'exit','quit','q','x' to quit. \u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 7-9\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34mDone.   Result = -2\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 3-0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34mDone.   Result = 3\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " exit\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "garfield = Garfield()\n",
+    "garfield.add(HelloBot())\n",
+    "garfield.add(GreetingBot())\n",
+    "garfield.add(FavoriteColorBot())\n",
+    "garfield.add(CalBot('looped'))\n",
+    "garfield.run()"
    ]
   },
   {
