--- a/6-structure-5.ipynb
+++ b/6-structure-5.ipynb
@@ -78,11 +78,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "plesae enter a number:  9.0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not a valid number.Try again...\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "plesae enter a number:  9\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "your number is:  9\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "while True:\n",
+    "    try:\n",
+    "        x=int(input('plesae enter a number: '))\n",
+    "        break\n",
+    "    except ValueError:\n",
+    "        print('Not a valid number.Try again...')\n",
+    "print('your number is: ',x)"
    ]
   },
   {
@@ -96,11 +131,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Handling run-time error: division by zero\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "def this_fails():\n",
+    "    x=1/0\n",
+    "try:\n",
+    "    this_fails()\n",
+    "except ZeroDivisionError as err:\n",
+    "    print('Handling run-time error:',err)"
    ]
   },
   {
